# alicia

./: .coveragerc  .editorconfig  .env  .gitignore  .isort.cfg  .last_run.sh  .pylintrc  .pylintrc.old  .style.yapf  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  ]  basic-model.pth  conda-pkg.txt  environment.yml  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  showcase.sh  todo.md  tox.ini
data/mnist-numbers-tiny/: labels.csv
data/test/: labels.csv
docs/: CONTRIBUTING.rst  LICENSE.txt  README.rst  conf.py  index.rst  showcase.rec  showcase.sh  todo.md
src/: constants.py  main.py
src/actions/: train.py
src/aeimg_classifier/: __init__.py  cli.py  cli.skeleton.py  skeleton.py
src/aeimg_classifier/lib/: dummy.py
src/cli/: classify.py  create.py  download.py  info.py  main.py  predict.py  test.py  train.py
src/commands/: __init__.py  compare.py  compare_accuracy.py  compare_info.py  compare_step_speed.py  create.py  download.py  info.py  modify.py  predict.py  preview.py  shared.py  test.py  train.py
src/config/: supported_architectures.py
src/configs/: dataset_split_methods.json
src/datasets/: ae_image_dataset.py  alicia_dataset.py
src/dependencies/: __init__.py  core.py  datatypes.py  fancy.py
src/features/: __init__.py
src/features/comparer/: comparer.py
src/features/image_viewer/: image_viewer.py
src/features/torchvision_downloader/: TorchvisionDownloader.py  torchvision_downloader.py
src/features/trainer/: Trainer.py  trainer.py
src/lib/: dispaly_analytics.py  torchvision_downloader.py
src/libs/: Pretty_Info.py  __init__.py  colorized_diff.py  get_args_kwargs_from_string.py  image_transforms.py  pad_to_size_transform.py  prettify_comparer.py  pretty_info.py  pretty_train.py  shape_transforms.py  sizeof_formated.py  un_labeled_image_dataset.py
src/models/: Basic.py  abstract.py  basic.py  cat.py  dummy.py
src/modules/: __init__.py
src/modules/datasets/: UnLabeledImageDataset.py  __init__.py  un_labeled_image_dataset.py
src/modules/models/: AbsModule.py  Basic.py  __init__.py  abs_module.py  alexnet.py  basic.py  basic_conv.py  dummy.py  elemental.py  lenet5.py  mnasnet.py  squeezenet.py
src/modules/transforms/: ImageTransforms.py  __init__.py  flowers.py  flowers_unshaped.py  image_transforms.py  img_pico.py  img_small.py  mnist.py  mnist_4D.py
src/transforms/: basic.py
src/views/create/: cli.py
src/views/download/: cli.py
src/views/info/: cli.py
src/views/predict/: cli.py
src/views/shared/: DispalyAnalytics.py  PyplotHelper.py
src/views/test/: cli.py
src/views/train/: cli.py
tests/: conftest.py  end2end.sh  test_skeleton.py
tests/end-to-end/: download.py
tests/features/1-trainer/: test_trainer.py
tests/features/2-comparer/: test_comparer.py
tests/features/3-torchvision_downloader/: test_torchvision_downloader.py  torchvision_downloader.py
tests/features/comparer/: test_comparer.py
tests/features/torchvision_downloader/: test_torchvision_downloader.py
tests/features/trainer/: test_Trainer.py  test_trainer.py
tests/fixtures/: comparer.py  elemental-five-epochs.pth  elemental-not-trained.pth  elemental-two-epochs.pth  models.py  torchvision_downloader.py  trainer.py
tests/fixtures/data/: labels.csv  mnist-labels.csv
tests/fixtures/data.o/: labels.csv
tests/libs/: get_args_kwargs_from_string.py  image_transforms.py  shape_transforms.py  sizeof_formated.py
tools/: Flower102_labels.json  fix-flower-map-index.py
