[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.pylint.master]
load-plugins="pylint_mccabe"

[tool.pylint.design]
max-complexity=10

[tool.pylint.format]
max-line-length=120
indent-string='  ' # Two spaces, i dislike the 4 spaces convention

[tool.pylint.typecheck]
generated-members="numpy.*, torch.*, torchvision.*"

[tool.pytest.ini]

[tool.pytest.ini_options]
markers = [
"download: marks test as a download, therefore slow and internet dependent (deselect with '-m \"not download\"')",
]
pythonpath = [ '.', 'src', 'tests' ]
testpaths = [ "tests" ]
addopts = """
  --cov=src/features --cov=src/libs
  --cov-report=html
"""
