# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = AlicIA
description = A CLI to download, train, test, predict and compare an image classifiers.
author = aemonge
author_email = andres@aemonge.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/aemonge/alicia

platforms = Mac,Linux
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src
python_requires = >=3.10
install_requires =
    importlib-metadata; python_version<"3.9"
    astroid
    asttokens
    attrs
    backcall
    better-abc
    bracex
    cachetools
    cattrs
    certifi
    chardet
    charset-normalizer
    click
    colorama
    configupdater
    contourpy
    coverage
    cycler
    debugpy
    decorator
    dill
    distlib
    docstring-to-markdown
    exceptiongroup
    executing
    filelock
    fonttools
    idna
    iniconfig
    ipdb
    ipython
    isort
    jedi
    jedi-language-server
    kiwisolver
    lazy-object-proxy
    loading-display
    lsprotocol
    matplotlib
    matplotlib-inline
    mccabe
    natsort
    nodeenv
    numpy
    nvidia-cublas-cu11
    nvidia-cuda-nvrtc-cu11
    nvidia-cuda-runtime-cu11
    nvidia-cudnn-cu11
    packaging
    parso
    pep8
    pexpect
    pickleshare
    pillow
    platformdirs
    plotext
    pluggy
    prompt-toolkit
    ptyprocess
    pure-eval
    pydantic
    pygls
    pygments
    pylint
    pylint-mccabe
    pyparsing
    pyproject-api
    pyright
    pyscaffold
    pytest
    pytest-cov
    pytest-mccabe
    python-dateutil
    requests
    scipy
    setuptools-scm
    six
    stack-data
    termcolor
    tomli
    tomlkit
    torch
    torchaudio
    torchvision
    tox
    traitlets
    typeguard
    typing-extensions
    urllib3
    virtualenv
    wcmatch
    wcwidth
    wrapt


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    alicia = main:call

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[pyscaffold]
version = 0.0.1
package = alicia
